# lpgl-graphql

./: .gitignore  Dockerfile  README.md  movies.db  pyproject.toml  requirements.txt
data/: movies.db
src/: app.py  models.py  resources.py  schema.py  schema_mutations.py  schema_types.py
