[tool.poetry]
name = "graphqlserv"
version = "0.1.0"
description = ""
authors = ["Zachary Arnaise <57530191+zacharyarnaise@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
falcon = "^2.0.0"
waitress = "^1.4.4"
graphene = "^2.1.8"
sqlalchemy = "^1.3.22"
graphene-sqlalchemy = "^2.3.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
isort = "^5.7.0"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
